--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
+        "swiper": "^9.1.0",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
         "vue3-toastify": "0.0.4"
